mainpage text added

--- a/content/data-structures.mdx
+++ b/content/data-structures.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Data Structures . "
+title: "Тестовая статья о структурах данных . "
 publishedAt: "2024-09-11"
 summary: "Test article"
 tags: "best knowledge"
