--- a/content/collatz-hypothesis.mdx
+++ b/content/collatz-hypothesis.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Математика это очень интересно, если ее..."
+title: "Гипотеза Коллатца - забавная штука!"
 publishedAt: "2024-08-13"
 summary: "Небольшой рассказ о том как я делаю дела."
 tags: "Configuration, Web development"
@@ -12,15 +12,23 @@ tags: "Configuration, Web development"
 (получаем 3n + 1). Над полученным числом выполняем те же самые действия, и так далее.
 Гипотеза Коллатца заключается в том, что какое бы начальное число n мы ни взяли, 
 рано или поздно мы получим единицу.
+
 Например, для числа 3 получаем:
-3 — нечётное, 3×3 + 1 = 10
-10 — чётное, 10:2 = 5
-5 — нечётное, 5×3 + 1 = 16
-16 — чётное, 16:2 = 8
-8 — чётное, 8:2 = 4
-4 — чётное, 4:2 = 2
-2 — чётное, 2:2 = 1
-1 — нечётное.
+
+- 3 — нечётное, 3×3 + 1 = 10
+- 10 — чётное, 10:2 = 5
+- 5 — нечётное, 5×3 + 1 = 16
+- 16 — чётное, 16:2 = 8
+- 8 — чётное, 8:2 = 4
+- 4 — чётное, 4:2 = 2
+- 2 — чётное, 2:2 = 1
+- 1 — нечётное.
+
+
+Эту функция которая реализует последовательность действий, и как следствие 
+доказывает гипотезу.
+Можете сами проверить !
+
 ```
 def collatz(x):
     yield x
@@ -30,3 +38,6 @@ def collatz(x):
 
 print(*collatz(114))
 ```
+
+
+Такие дела...
