reorganised data and posts

--- a/content/dijkstra-algorythm.mdx
+++ b/content/dijkstra-algorythm.mdx
@@ -1,18 +1,10 @@
 ---
 title: "Алгоритм Эдсгера Дейкстры. "
-publishedAt: "2024-09-11"
+publishedAt: "2024-11-11"
 summary: "Алгоритмы на графах"
 tags: "алгоритмы, дейкстра, python"
 ---
 
-
-Прежде чем что-либо делать, я всегда задаю себе вопрос. Зачем ?
-Изучая материал всегда важно его запомнить, осознать на уровне моторной памяти.
-Так чтобы оперировать этими знаниями на бесознательном уровне. 
-А поэтому, я решил конспектировать все то что считаю для себя важным. 
-Так что в большей степени я пишу это для себя, а если кто то будет пользоваться 
-моими шпаргалками, или кому то покажется текст и подача супер понятной. 
-Или вы нашли эту статью, то как говориться - welcome!
 
 Алгоритмы это важно ! Возможно их не так часто приходится применять на практике, 
 но этот скилл просто должен быть у каждого кто кодит. 
@@ -23,7 +15,7 @@ tags: "алгоритмы, дейкстра, python"
 ---
 
 #### Алгоритм Эдсгера Дейкстры (1959 год) 
-или "Алгорит Дейкстры"
+или просто "Алгорит Дейкстры"
 
 
 Допустим что мы имеем:
