--- a/content/euclidian-algo.mdx
+++ b/content/euclidian-algo.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Алгоритм Евклида - как есть ... "
-publishedAt: "2024-08-11"
+title: "Алгоритм Евклида - найти НОД. "
+publishedAt: "2024-11-09"
 summary: "Найти НОД, чтоб никогда не терять."
 tags: "Такие знания всегда нужны!"
 ---
