changed some info

--- a/content/dijkstra-algorythm.mdx
+++ b/content/dijkstra-algorythm.mdx
@@ -65,7 +65,7 @@ graph['fin'] = {}
 ```
 
 
-#### Связи указывающие на направление вершин:
+#### Сам граф и его ребра с весами:
 ```
 graph['start']['a'] = 6
 graph['start']['b'] = 2
@@ -80,7 +80,7 @@ graph['b']['fin'] = 5
 - От В к А 
 - От В к финишу 
 
-#### Цены / веса ребер: 
+#### Начальные данные указывающие стоймость пути: 
 
 ```
 costs = {}
@@ -90,7 +90,7 @@ costs['fin'] = float('inf')
 
 ```
 
-#### Родительские узлы:
+#### Узлы и их родительские узлы:
 
 ```
 parents = {}
@@ -100,7 +100,7 @@ parents['in'] = None
 
 ```
 
-#### Пустой Python List для результирующего набора.
+#### Пустой Python List для результирующего маршрута.
 
 ```
 processed = list()
@@ -146,8 +146,5 @@ print(processed)
 
 ```
 
----
 
-### Чуть позже реализую алгоритм по другому, с декларацией классов.
 
-Но это позже...
