small pieces of text added

--- a/content/github-pages.mdx
+++ b/content/github-pages.mdx
@@ -1,6 +1,11 @@
 ---
-title: "GitHub Pages - мой опыт настройки конвейера сборки."
+title: "GitHub Pages - мой опыт настройки."
 publishedAt: "2024-11-01"
-summary: "Небольшой рассказ о том как я делал пайплайн для этого сайта."
+summary: "Небольшой рассказ о том как я делал сборку для этого сайта."
 tags: "Configuration, Web development"
 ---
+
+#### Текст публикации в разработке.
+
+- Текст....
+
