new article - checked=False

--- a/content/dijkstra-algorythm.mdx
+++ b/content/dijkstra-algorythm.mdx
@@ -21,15 +21,18 @@ tags: "алгоритмы, дейкстра, python"
 Допустим что мы имеем:
 Направленный (Ориентированный) Ациклический Граф 
 или Direct Acyclic Graph как говорят англичане.
-Представим в нем ребра, узлы, ноды (как вам удобнее):
+Представим в нем ребра и вершины:
 
 
 ```
-[Start] >>> [A]
-[Start] >>> [B]
-[B]   >>>   [A]
-[A]   >>> [Finish]
-[B]   >>> [Finish]
+[Start] >> [A] = 4
+[Start] >> [B] = 1
+[Start] >> [Finish] = 6
+[B] >> [F] = 3
+[B] >> [C] = 2
+[A] >> [C] = 2
+[C] >> [F] = 2
+
 ```
 
 Алгоритм Дейкстры решает задачу поиска кратчайшего пути на 'взвешенных графах'.
@@ -74,11 +77,11 @@ graph['b']['a'] = 3
 graph['b']['fin'] = 5
 
 ```
-- От старта к А 
-- От старта к В 
-- От А к финишу 
-- От В к А 
-- От В к финишу 
+- От `старта к А`
+- От `старта к В` 
+- От `А к финишу`
+- От `В к А`
+- От `В к финишу`
 
 #### Начальные данные указывающие стоймость пути: 
 
@@ -145,6 +148,75 @@ while node is not None:
 print(processed)
 
 ```
+---
+
+### Пример логического решения :
 
 
->>>> Yes ~!
+Допустим мы имеем ацикличный взвешенный граф:
+Возьмем новый граф, с другип количеством ребер и весами не такаими как в задаче с кодом выше.
+
+Его вершины и веса:
+```
+ST >> A = 4
+ST >> B = 1
+ST >> F = 6
+B >> F = 3
+B >> C = 2
+A >> C = 2
+C >> F = 2
+```
+
+Начинаем от старта к любой, из наших трех начальных вершин: `ST >> A` , `ST >> B` , `ST >> F`
+
+Первая итерация, кладем в очередь - вершину, вес, и вершину предшественника.
+
+Как выгдядит это:
+
+Обходим `ST >> A = 4`, `ST >> B = 1`, `ST >> F = 6` 
+Важно что в очереди на выход/обработку первым  - самый легкий вес, и первый на извлечение и обход к следующим узлам.
+
+```    
+ ------------------------------------
+| предшественник   | узел      | вес |
+--------------------------------------
+| ST               | B         | 1   |
+--------------------------------------
+| ST               | A         | 4   |
+--------------------------------------
+| ST               | F         | 6   |
+--------------------------------------
+
+```
+Значит первым извлекаем `ST >> B` который весит `1`, он у нас самый легкий и поэтому работаем с ним первым.
+
+`B >> C = 2` + Вес ребра предшественника, он у нас = `1`. 
+То есть мы на прошлой иттерации определили вес ребра 
+до вершины `В`.
+
+Следовательно `B >> F = 3` +  Вес предшественника = `1`
+
+И далее работаем по тому же алгоритму...
+```
+------------------------------------
+| предшественник   | узел      | вес |
+--------------------------------------
+| B                | C         | 3   |
+--------------------------------------
+| B                | F         | 4   |
+--------------------------------------
+```
+Больше смежных ребер у `B` нет !  Следовательно переходим к другим, извлекаем из очереди самый легкий!
+Дальше переходим к `C >> F = 5`.
+
+Ребро до `F` не станем переписывать, оно тяжелее чем уже имеющееся значение  `B >> F  = 4` 
+Возвращаемся к тем ребрам которые не иследованы.
+
+`A >> C  = 2` + `4` от `ST >> A` = `6` - Мы не будем переписывать значение `C` = `6` 
+потому что есть путь легче `S >> B >> C`. 
+Оставим `C` весом 3, а его предшественник `B`
+`C >> F` = `2` + У узла `C` уже было значение `3` от ребер `SТ >> B >> C`, что в сумме дает вес `5`, 
+но мы знаем что до `F` мы доберемся за вес меньше `4` по ребрам от `SТ >> B >> F`
+Так мы обошли все узлы, и нашли самый короткий путь от стартового - `SТ`, через - `B`, к - `F` финишу.
+
+---
