art: article started but not finished

--- a/content/granular-micro.mdx
+++ b/content/granular-micro.mdx
@@ -8,12 +8,33 @@ tags: "docker, microservices, web"
 
 #### Разделяй и влавствуй!
 
+---
+
+
 Cтатья о том как (на мой взгляд), можно удобно организовать архитектуру и разработку большого приложения
 где каждый разработчик будет иметь свою зону ответсвенности, разрабатывать и развивать условно "свой" микросервис
 имея такую инфраструктуру в которой  возможно быстро применять обновления и пересобирать приложение.
 Самой сложной проблемой в подобной стратегии является согласованность микросервисов, но уверен это можно решить хорошим
 документированным кодом и относительно хорошим пониманием бизнес логики конечного продукта.
+Современная разработка веб приложений предполагает не только исполняемый программный код но и инфраструктуру в которой
+развернуто приложение или кластер из микросервисов который может оркестрироваться такими системами как K8 или Docker Swarm.
+Достаточно один раз автоматизировать сборку и тестирование, а при каждом следующем обновлении кодовой базы новая версия программы или новая опция
+будет опубликована в самое оптимальное время. И это все считается нормой современной разработки веб приложений.
+Микросервисы стали своего рода стандартом и хорошим тоном в современных высоконагруженых приложениях. 
+Как в общем и в любой системе есть слабые и сильные места. В случае с микросервисами, сильными сторонами являються, распределенность,
+независимость, легкость в обслуживании, обновлении каждого сервиса, и устойчивости к всякого рода потресениям.
+Но есть и слабые места подобного подхода. Большое количество маленьких независимых систем сложнее согласовывать.
+В случае когда команда разработчиков ориентирована на быстрое производство где основная задача "выкатить" обновление или "фичу". 
+А часто "на лету", в процессе производства заказчик добавляет или меняет логику приложения, как правило это может сказаться на деталях и согласованности 
+микросервисов и корректной работы всего веб сервиса. Вопрос согласованности требует тщательного и скурпулезного подхода. 
+Я бы назвал такой подход - "подумай хорошо, а потом сделай". Хорошим примером подобной реализации является Netflix, у них больше 1000
+распределенных микросервисов и похоже что это число будет увеличиваться вместе с количеством разработчиков.
+Пожалуй многие разработчики со мной могут согласится, писать собственное приложение гораздо легче чем разбираться в чужом 
+слабо документированом коде. Лично я бы никому не пожелал прийти на новое место работы, и получить легаси длинной 8000 - 10000 строк кода.
+
+
 
 `... To be continued !`
+
 
 
