ref: changed texts, photo, corrected articles

--- a/content/collatz-hypothesis.mdx
+++ b/content/collatz-hypothesis.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Гипотеза Коллатца - забавная штука!"
+title: "Гипотеза Коллатца"
 publishedAt: "2024-11-10"
 summary: "Небольшой рассказ о том как я делаю дела."
 tags: "Configuration, Web development"
