--- a/content/granular-micro.mdx
+++ b/content/granular-micro.mdx
@@ -1,40 +1,41 @@
 ---
-title: "Granular Microservices. "
+title: "Разделяй и влавствуй ! "
 publishedAt: "2024-12-13"
 summary: "Что я думаю о микросервисах"
 tags: "docker, microservices, web"
 ---
 
 
-#### Разделяй и влавствуй!
-
----
-
-
-Cтатья о том как (на мой взгляд), можно удобно организовать архитектуру и разработку большого приложения
-где каждый разработчик будет иметь свою зону ответсвенности, разрабатывать и развивать условно "свой" микросервис
-имея такую инфраструктуру в которой  возможно быстро применять обновления и пересобирать приложение.
-Самой сложной проблемой в подобной стратегии является согласованность микросервисов, но уверен это можно решить хорошим
-документированным кодом и относительно хорошим пониманием бизнес логики конечного продукта.
-Современная разработка веб приложений предполагает не только исполняемый программный код но и инфраструктуру в которой
-развернуто приложение или кластер из микросервисов который может оркестрироваться такими системами как K8 или Docker Swarm.
-Достаточно один раз автоматизировать сборку и тестирование, а при каждом следующем обновлении кодовой базы новая версия программы или новая опция
-будет опубликована в самое оптимальное время. И это все считается нормой современной разработки веб приложений.
-Микросервисы стали своего рода стандартом и хорошим тоном в современных высоконагруженых приложениях. 
-Как в общем и в любой системе есть слабые и сильные места. В случае с микросервисами, сильными сторонами являються, распределенность,
-независимость, легкость в обслуживании, обновлении каждого сервиса, и устойчивости к всякого рода потресениям.
-Но есть и слабые места подобного подхода. Большое количество маленьких независимых систем сложнее согласовывать.
-В случае когда команда разработчиков ориентирована на быстрое производство где основная задача "выкатить" обновление или "фичу". 
-А часто "на лету", в процессе производства заказчик добавляет или меняет логику приложения, как правило это может сказаться на деталях и согласованности 
-микросервисов и корректной работы всего веб сервиса. Вопрос согласованности требует тщательного и скурпулезного подхода. 
-Я бы назвал такой подход - "подумай хорошо, а потом сделай". Хорошим примером подобной реализации является Netflix, у них больше 1000
-распределенных микросервисов и похоже что это число будет увеличиваться вместе с количеством разработчиков.
-Пожалуй многие разработчики со мной могут согласится, писать собственное приложение гораздо легче чем разбираться в чужом 
-слабо документированом коде. Лично я бы никому не пожелал прийти на новое место работы, и получить легаси длинной 8000 - 10000 строк кода.
 
 
 
-`... To be continued !`
+Микросервисная архитектура стала популярной в последние годы благодаря своей гибкости и масштабируемости. Она представляет собой подход к разработке программного обеспечения, где приложение состоит из небольших, автономных сервисов, которые могут разрабатываться, деплоиться и масштабироваться независимо друг от друга. Несмотря на явные преимущества, одна из ключевых проблем, с которой сталкиваются разработчики, — это обеспечение согласованности данных в распределенных системах. В этой статье мы рассмотрим преимущества микросервисной архитектуры и способы решения проблем согласованности.
 
+### Преимущества микросервисной архитектуры
 
+1. **Независимость развертывания и разработки**: Каждый микросервис разрабатывается независимо, что позволяет командам работать автономно. Это ускоряет выпуск новых функций и исправлений, поскольку изменения в одном микросервисе не требуют модификации всего приложения.
 
+2. **Масштабируемость**: Микросервисы можно масштабировать горизонтально в зависимости от конкретных потребностей. Например, если один микросервис испытывает повышенную нагрузку, его можно масштабировать отдельно от других.
+
+3. **Устойчивость к отказам**: Сбой в одном микросервисе, в идеале, не приводит к полному отказу системы. Это повышает надежность приложения, так как сбои локализованы.
+
+4. **Использование различных технологий**: Микросервисы могут быть написаны на разных языках программирования и использовать различные технологии в зависимости от задачи, что позволяет выбирать лучшие инструменты для каждой конкретной функции.
+
+### Решение проблем согласованности
+
+Несмотря на многочисленные преимущества, распределенные микросервисы сталкиваются с проблемами согласованности данных. В отличие от монолитной архитектуры, где транзакции распространяются в рамках одного процесса, микросервисы не могут полагаться на традиционные методы согласованности. Вот несколько подходов к решению этой проблемы:
+
+1. **Saga-паттерн**: Этот шаблон реализует транзакции, которые охватывают несколько микросервисов. Он состоит из серии локальных транзакций, каждая из которых имеет соответствующую компенсирующую транзакцию, которая откатывает изменения в случае ошибки. Это позволяет управлять трансакционностью в распределенных системах без использования двухфазного коммита.
+
+2. **Eventual Consistency (Конечная согласованность)**: Основываясь на идее, что система придет к согласованному состоянию после определенного периода времени, даже если отдельные микросервисы время от времени находятся в неконсистентном состоянии. При этом используется обмен событиями, чтобы обеспечить синхронизацию и согласованность данных между сервисами.
+
+3. **CQRS (Command Query Responsibility Segregation)**: Этот паттерн разделяет операции чтения и записи данных. Команды изменяют состояние системы, в то время как запросы используются для чтения данных. Такое разделение позволяет оптимизировать каждый процесс отдельно и улучшить согласованность.
+
+4. **Event Sourcing**: Вместо сохранения текущего состояния системы, сохраняются все изменения состояния (события). Это позволяет воспроизвести состояние системы на любой момент времени, обеспечивая надежную согласованность и восстановление в случае сбоев.
+
+5. **Управляемые событиями системы**: Использование брокеров сообщений, таких как Kafka или RabbitMQ, позволяет микросервисам взаимодействовать асинхронно. Это снижает зависимость между сервисами и помогает поддерживать согласованность.
+
+### Заключение
+
+Микросервисная архитектура предлагает множество преимуществ, начиная от гибкости разработки до устойчивости системы. Тем не менее, распределенные системы неизбежно сталкиваются с проблемами согласованности. Используя современные подходы, такие как Saga-паттерны, конечная согласованность, CQRS и Event Sourcing, разработчики могут эффективно управлять согласованностью данных в микросервисных приложениях. 
+Таким образом, микросервисная архитектура остается эффективным выбором для создания сложных и масштабируемых систем.
