--- a/content/collatz-hypothesis.mdx
+++ b/content/collatz-hypothesis.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Гипотеза Коллатца"
 publishedAt: "2024-11-10"
-summary: "Небольшой рассказ о том как я делаю дела."
+summary: "Collatz Hypothesis"
 tags: "Configuration, Web development"
 ---
 
