content: ollama article

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -17,7 +17,7 @@ tags: "ollama,python,tool_calls,function calls"
 Или, например, бухгалтер задаёт голосом: «Сколько нужно доплатить, если я уже отдал 10000, а должен был 13200?» — 
 И ваш бот ассистент моментально даёт ответ... А бонусом высылает счет, накладную или что там еще нужно..?
 Это и есть tool calls — когда искусственный интеллект не просто разговаривает с клиентами, а сам инициирует выполнение нужного кода. 
-Я уже делал подобное на API open.ai, но заставить подобное приложение у себя на компьютере еще не пробовал. 
+Я уже делал подобное на API open.ai, но заставить работать подобное приложение у себя на компьютере еще не пробовал. 
 В общем решил попробовать подняв Ollama на своём Mac.
 
 Что такое Ollama?
@@ -44,7 +44,8 @@ ollama run llama3.2
 
 ```
 
-Инициировал проект с помощью uv. Установил Python-библиотеку для работы с Ollama:
+Инициировал проект с помощью пакетного менеджера uv.  
+Установил Python-библиотеку для работы с Ollama:
 
 ```
 uv pip install ollama
