content: ollama article vrs - 2

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -146,5 +146,4 @@ if response.message.tool_calls:
 Теперь можно расширять этот подход: подключить функции для создания счетов, генерации PDF-документов, работы с базой данных — всё это будет инициироваться обычным человеческим языком.
 Такой вот эксперимент...
 
-Ollama docs:
-<https://ollama.com/blog/tool-support>
+[Ollama docs:](https://ollama.com/blog/tool-support)
