content: ollama article vrs - 2

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -140,7 +140,7 @@ if response.message.tool_calls:
 
 ```
 
-Когда я запустил этот скрипт, модель правильно поняла: «Семь прибавить на двенадцать» — это команда на сложение. Она сама вызвала нужную функцию и выдала ответ. Всё без моего участия.
+Когда я запустил этот скрипт, модель правильно поняла: «Семь умножить на двенадцать» — это команда на сложение. Она сама вызвала нужную функцию и выдала ответ. Всё без моего участия.
 
 #### Итог:
 Теперь можно расширять этот подход: подключить функции для создания счетов, генерации PDF-документов, работы с базой данных — всё это будет инициироваться обычным человеческим языком.
