content: extended text

--- a/content/personal-story.mdx
+++ b/content/personal-story.mdx
@@ -7,15 +7,22 @@ image: "/photos/ivan-808.jpg"
 ---
 
 Меня зовут Иван, мне 46 лет. Я разведен, у меня две дочери — 14 и 11 лет.
-Большую часть своей профессиональной жизни я работал в технологичных сферах:
+Сейчас живу в городе Тбилиси, хотя до недавнего времени в Москве, а до этого жил и работал в Ростове На Дону.
+Большую часть своей профессиональной карьеры я работал в технологичных сферах:
 занимался настройкой систем видеонаблюдения, охранных систем, вычислительных сетей,
 а также был инженером сервисного обслуживания промышленного и аграрного оборудования.
-
-Но больше всего меня всегда привлекала идея создавать при помощи программирования.
+Были моменты когда я занимался разработкой и обслуживанием веб сайтов.
+Чаще всего мне приходилось справляться с задачами самому, и конечно выполняя эти задачи учился погружаясь в проблему решений.
+Мне всегда нравилось изучать вопрос чем чем то пользоваться по шаблону или выполнять по чьм то инструкциям.
+Мне сегда было интересно расти проффесионально, и я всегда имел возможность черпать знания из открытх источников.
+За это я очень благодарен Интернету и тем людям которые делятся полезной информацией. 
+Я абсолютно убежден что имея возможность черпать знания из открытых источников, помноженное на практический опыт,
+дают отличный результат и опыт основанный на практике.
+Больше всего меня всегда привлекала идея создавать при помощи программирования.
 Мои первые эксперименты были связаны с проектами "для своих" и прототипированием на Arduino.
 Бывали периоды, когда я делал сайты для малого бизнеса — в основном HTML с добавлением логики на JavaScript.
 
-У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — это электронная музыка.
+У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — <a href={'https://www.google.com/search?q=ivan+stereotekk&oq=ivan+stereotekk&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQRRgnGDsyBwgCEAAY7wUyBggDEEUYOzIHCAQQABjvBTIHCAUQABjvBTIHCAYQABjvBTIKCAcQABiABBiiBNIBCTUyNjRqMWoxNagCCLACAfEF31HcoHhWmhnxBd9R3KB4VpoZ&sourceid=chrome&ie=UTF-8'}>электронная музыка</a>.
 Я всегда хотел писать музыку с помощью кода — использовать такие инструменты, как FoxDot и SuperCollider,
 где музыкальные структуры задаются синтаксисом. Это казалось мне невероятно увлекательным и вдохновляющим.
 <img src="/photos/ableton.png" alt="Ablic" width="400" />
