--- a/content/personal-story-en.mdx
+++ b/content/personal-story-en.mdx
@@ -6,16 +6,26 @@ tags: "programming, autobiography, me"
 image: "/photos/ivan-808.jpg"
 ---
 
-My name is Ivan, I'm 46 years old. I'm divorced and have two daughters — 14 and 11 years old.  
-Most of my professional life has been spent in tech-related fields:  
-I’ve worked with video surveillance systems, security systems, computer networks,  
-and also as a service engineer for industrial and agricultural equipment.
+My name is Ivan, I am 46 years old. I am divorced and have two daughters — aged 14 and 11.
+Currently, I live in Tbilisi, though until recently I was based in Moscow, and before that, I lived and worked in Rostov-on-Don.
 
-But what has always attracted me the most is the idea of creating through programming.  
-My first experiments were hobbyist projects and prototyping with Arduino.  
-There were times when I built websites for small businesses — mostly HTML with some added JavaScript logic.
+Most of my professional career has been in technical fields:
+I have worked with video surveillance systems, security systems, and computer networks,
+and I also served as a maintenance engineer for industrial and agricultural equipment.
 
-I also have a passion that’s perhaps more than just a hobby — electronic music.  
+At times, I was also involved in developing and maintaining websites.
+More often than not, I had to handle tasks on my own, which meant learning by diving deep into the problems I needed to solve.
+I've always enjoyed studying a topic in depth rather than just following templates or instructions.
+Professional growth has always been important to me, and I've been fortunate to have access to open sources of knowledge.
+
+For that, I’m deeply grateful to the Internet and the people who share valuable information.
+I'm absolutely convinced that combining open-source learning with hands-on experience leads to strong and practical expertise.
+
+What has always fascinated me the most is the ability to create through programming.
+My first experiments were personal projects and prototyping with Arduino.
+There were times when I built websites for small businesses — mostly using HTML with some JavaScript logic.
+
+I also have a passion that’s perhaps more than just a hobby — <a href={'https://www.google.com/search?q=ivan+stereotekk&oq=ivan+stereotekk&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQRRgnGDsyBwgCEAAY7wUyBggDEEUYOzIHCAQQABjvBTIHCAUQABjvBTIHCAYQABjvBTIKCAcQABiABBiiBNIBCTUyNjRqMWoxNagCCLACAfEF31HcoHhWmhnxBd9R3KB4VpoZ&sourceid=chrome&ie=UTF-8'}>electronic music</a>.  
 I’ve always wanted to write music with code — using tools like FoxDot and SuperCollider,  
 where musical structures are defined through syntax. I found it incredibly fascinating and inspiring.  
 <img src="/photos/ableton.png" alt="Ablic" width="400" />
