did content less

--- a/content/personal-story.mdx
+++ b/content/personal-story.mdx
@@ -6,8 +6,8 @@ tags: "programming, autobiography, me"
 image: "/photos/ivan-808.jpg"
 ---
 
-Меня зовут Иван, мне 46 лет. Я разведен, у меня две дочери — 14 и 11 лет.
-Сейчас живу в городе Тбилиси, хотя до недавнего времени в Москве, а до этого жил и работал в Ростове На Дону.
+Меня зовут Иван!
+
 Большую часть своей профессиональной карьеры я работал в технологичных сферах:
 занимался настройкой систем видеонаблюдения, охранных систем, вычислительных сетей,
 а также был инженером сервисного обслуживания промышленного и аграрного оборудования.
