--- a/content/videosurveillance-russ.mdx
+++ b/content/videosurveillance-russ.mdx
@@ -8,7 +8,7 @@ image: "/photos/iv-gon.png"
 
 ### Приветствую!
 
-Меня зовут Иван Гончаров, мне 46 лет. В настоящее время я ищу работу по одному из двух направлений, поскольку обладаю обширным опытом в области:
+Меня зовут Иван Гончаров, В настоящее время я ищу работу по одному из двух направлений, поскольку обладаю обширным опытом в области:
 
 - охранных систем,
 - систем видеонаблюдения,
