--- a/content/personal-story-en.mdx
+++ b/content/personal-story-en.mdx
@@ -25,7 +25,7 @@ What has always fascinated me the most is the ability to create through programm
 My first experiments were personal projects and prototyping with Arduino.
 There were times when I built websites for small businesses — mostly using HTML with some JavaScript logic.
 
-I also have a passion that’s perhaps more than just a hobby — <a href={'https://www.google.com/search?q=ivan+stereotekk&oq=ivan+stereotekk&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQRRgnGDsyBwgCEAAY7wUyBggDEEUYOzIHCAQQABjvBTIHCAUQABjvBTIHCAYQABjvBTIKCAcQABiABBiiBNIBCTUyNjRqMWoxNagCCLACAfEF31HcoHhWmhnxBd9R3KB4VpoZ&sourceid=chrome&ie=UTF-8'}>electronic music</a>.  
+I also have a passion that’s perhaps more than just a hobby electronic music.  
 I’ve always wanted to write music with code — using tools like FoxDot and SuperCollider,  
 where musical structures are defined through syntax. I found it incredibly fascinating and inspiring.  
 <img src="/photos/ableton.png" alt="Ablic" width="400" />
