--- a/content/personal-story.mdx
+++ b/content/personal-story.mdx
@@ -13,25 +13,25 @@ image: "/photos/ivan-808.jpg"
 а также был инженером сервисного обслуживания промышленного и аграрного оборудования.
 Были моменты когда я занимался разработкой и обслуживанием веб сайтов.
 Чаще всего мне приходилось справляться с задачами самому, и конечно выполняя эти задачи учился погружаясь в проблему решений.
-Мне всегда нравилось изучать вопрос чем чем то пользоваться по шаблону или выполнять по чьм то инструкциям.
-Мне сегда было интересно расти проффесионально, и я всегда имел возможность черпать знания из открытх источников.
+Мне всегда нравилось изучать вопрос, а за одно и расти проффесионально, 
+и я всегда имел возможность черпать знания из открытх источников.
 За это я очень благодарен Интернету и тем людям которые делятся полезной информацией. 
 Я абсолютно убежден что имея возможность черпать знания из открытых источников, помноженное на практический опыт,
 дают отличный результат и опыт основанный на практике.
-Больше всего меня всегда привлекала идея создавать при помощи программирования.
+Больше всего меня привлекала идея реализовывать идеи при помощи программирования.
 Мои первые эксперименты были связаны с проектами "для своих" и прототипированием на Arduino.
 Бывали периоды, когда я делал сайты для малого бизнеса — в основном HTML с добавлением логики на JavaScript.
 
-У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — <a href={'https://www.google.com/search?q=ivan+stereotekk&oq=ivan+stereotekk&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQRRgnGDsyBwgCEAAY7wUyBggDEEUYOzIHCAQQABjvBTIHCAUQABjvBTIHCAYQABjvBTIKCAcQABiABBiiBNIBCTUyNjRqMWoxNagCCLACAfEF31HcoHhWmhnxBd9R3KB4VpoZ&sourceid=chrome&ie=UTF-8'}>электронная музыка</a>.
+У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — электронная музыка.
 Я всегда хотел писать музыку с помощью кода — использовать такие инструменты, как FoxDot и SuperCollider,
 где музыкальные структуры задаются синтаксисом. Это казалось мне невероятно увлекательным и вдохновляющим.
 <img src="/photos/ableton.png" alt="Ablic" width="400" />
 
 Позже я решил всерьёз заняться Python, а со временем — попробовать устроиться на работу разработчиком.
-Я настоящий самоучка и искренне верю, что сегодня можно получить качественные знания о технологиях,
-имея лишь желание и доступ к Интернету.
+Я самоучка но искренне верю, что сегодня можно получить качественные знания о технологиях,
+имея лишь желание и доступ к Интернету. Комбинируя эту возможность с хорошими книгами можно получить то чего хочешь.
 
-При этом я не ограничиваюсь только онлайн-источниками. У меня есть небольшая коллекция бумажных книг
+При этом я не ограничиваюсь только онлайн-источниками. У меня есть коллекция бумажных книг
 и ещё больше — в цифровом виде. Вот некоторые из них, которые я считаю особенно полезными,
 а некоторые держу под рукой как справочники:
 
@@ -45,15 +45,18 @@ image: "/photos/ivan-808.jpg"
 
 «Python. К вершинам мастерства» (O'Reilly)
 
-Паттерны проектирования
+"Паттерны проектирования"
 
 Также я регулярно читаю статьи, блоги и документацию, чтобы повышать уровень и развивать культуру разработки.
 Мне очень нравится профессия разработчика — я считаю её искусством: умением оперировать знаниями
 и создавать архитектурную красоту приложения.
 
-Создание хорошего приложения, на мой взгляд, сродни работе талантливого архитектора.
-Уверен, в нашей профессии есть свои Ле Корбюзье и Гауди.
-Я хочу расти, получать больше практики и совершенствоваться в этом ремесле.
+Возможно некоторым покажется что мой возраст не располагает к динамике и развитию, но уверяю вас это не так!
+Внутренне, впрочем как и визуально я чувствую себя вполне энергичным, и мне комфортно с энергичными людьми, наверное даже моложе чем я.
+В общем не надо эйджизма! Я такой же как и вы, мне нравится делать вещи с огнем в глазах. Не бойтесь мое число на счетчике лет! 
+Мне нужна работа ! У меня много дел !
 
+Как минимум я хочу развиваться, получать больше практики и совершенствоваться в этом ремесле. Добиваться поставленных перед собой целей !
 
+Обнимаю вас этим текстом !
 
